ui: paging layout overflow fix for Internet Explorer

--- a/elmyra.ip.access.epo/elmyra/ip/access/epo/static/css/app.css
+++ b/elmyra.ip.access.epo/elmyra/ip/access/epo/static/css/app.css
@@ -144,6 +144,7 @@ a.editable-click {
 
 /* pager, pagination */
 .pager-area {
+    margin-top: 10px;
     margin-bottom: 20px;
 }
 .pagination {
